3448
on trunk:
{code}
scala>  0 match { case List(_*) => true }
<console>:6: error: scrutinee is incompatible with pattern type;
 found   : List[A]
 required: Int
        0 match { case List(_*) => true }
                           ^
{code}
hooray!
